created game logic

--- a/memory_game/index.html
+++ b/memory_game/index.html
@@ -3,15 +3,35 @@
 <head>
 	<title> Memory Card Game
 	</title>
+	<link href="https://fonts.googleapis.com/css?family=Droid+Serif|Raleway:400,500,600,700" rel="stylesheet">
+	<link href="css/style.css" rel="stylesheet" type="text/css">
+	
 	</head>
 <body>
-	<h1>Memory Game</h1>
-	<a href="#">Instructions</a>
-	<a href="#">Game</a>
-	<h2>Instructions</h2>
+	<header>
+		<h1>Memory Game</h1>
+	</header>
+	<nav>
+	<a href="index.html#ins-anchor">Instructions</a>
+	<a href="#game-anchor">Game</a>
+	</nav>
+	<main>
+	<h2 id="ins-anchor">Instructions</h2>
 	<p>Concentration, also known as Match Match, Memory, Pelmanism, Shinkei-suijaku, Pexeso or simply Pairs, is a card game in which all of the cards are laid face down on a surface and two cards are flipped face up over each turn. The object of the game is to turn over pairs of matching cards.</p>
 	<br>
 	<p>Memory is a fun way to pass the time and I hope you enjoy the version of it I have made here!</p>
-	<P>Check me out on <a href="https://www.linkedin.com/in/william-njie-94a4a321">LinkedIn</a> and on <a href="https://www.facebook.com/wsnjie">Facebook!</a></P>
+	<P>Check me out on <a href="https://www.linkedin.com/in/william-njie-94a4a321"><span class="inlinelinks">LinkedIn</a></span> and on <a href="https://www.facebook.com/wsnjie"><span class="inlinelinks">Facebook!</a></span></P>
+	<div id="game-anchor">
+		<img src="images/back.png" alt="Queen of Diamonds">
+		<img src="images/back.png" alt="Queen of Hearts">
+		<img src="images/back.png" alt="King of Diamonds">
+		<img src="images/back.png" alt="King of Hearts">
+	</div>
+</main>
+<footer class="clearfix">
+	<p class="copyright">Copyright 2018</p>
+	<p class="message">Created with &hearts; by <span class="name">GA</span></p>
+	</footer>
+<script src="js/main.js"></script>
 </body>
 </html>
