--- a/memory_game/index.html
+++ b/memory_game/index.html
@@ -13,7 +13,7 @@
 	</header>
 	<nav>
 	<a href="index.html#ins-anchor">Instructions</a>
-	<a href="#game-anchor">Game</a>
+	<a href="#game-board">Game</a>
 	</nav>
 	<main>
 	<h2 id="ins-anchor">Instructions</h2>
@@ -21,12 +21,7 @@
 	<br>
 	<p>Memory is a fun way to pass the time and I hope you enjoy the version of it I have made here!</p>
 	<P>Check me out on <a href="https://www.linkedin.com/in/william-njie-94a4a321"><span class="inlinelinks">LinkedIn</a></span> and on <a href="https://www.facebook.com/wsnjie"><span class="inlinelinks">Facebook!</a></span></P>
-	<div id="game-anchor">
-		<img src="images/back.png" alt="Queen of Diamonds">
-		<img src="images/back.png" alt="Queen of Hearts">
-		<img src="images/back.png" alt="King of Diamonds">
-		<img src="images/back.png" alt="King of Hearts">
-	</div>
+	<div id="game-board" class="board clearfix"></div>
 </main>
 <footer class="clearfix">
 	<p class="copyright">Copyright 2018</p>
