added reset button

--- a/memory_game/index.html
+++ b/memory_game/index.html
@@ -22,6 +22,9 @@
 	<p>Memory is a fun way to pass the time and I hope you enjoy the version of it I have made here!</p>
 	<P>Check me out on <a href="https://www.linkedin.com/in/william-njie-94a4a321"><span class="inlinelinks">LinkedIn</a></span> and on <a href="https://www.facebook.com/wsnjie"><span class="inlinelinks">Facebook!</a></span></P>
 	<div id="game-board" class="board clearfix"></div>
+	<button type="button" id="reset">Reset Game</button>
+
+
 </main>
 <footer class="clearfix">
 	<p class="copyright">Copyright 2018</p>
